transforming-retail-with-ai/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-backend
  namespace: tbb
spec:
  selector:
    app: retail-backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
